added assets folder

--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
     <section class="hero-section" id="hero-section">
       <div class="hero-wrapper">
         <div class="hero-img">
-          <img src="/Headshot.jpg">
+          <img src="/Assets/Headshot.jpg">
         </div>
         <h1>Joshua<br>Lively&nbsp;</h1>
         <div class="hero-circle1"></div>
